Проверка работы на Java6 + WebSphere 8.5.5.9

--- a/web_service/web_service_impl/src/main/webapp/WEB-INF/web.xml
+++ b/web_service/web_service_impl/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,14 @@
         <url-pattern>/StreamFileService</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>ViewStatusMessages</servlet-name>
+        <servlet-class>ch.qos.logback.classic.ViewStatusMessagesServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>ViewStatusMessages</servlet-name>
+        <url-pattern>/logBackStatus</url-pattern>
+    </servlet-mapping>
+
 </web-app>
