--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </modules>
     <packaging>pom</packaging>
     <properties>
-        <jdk.version>1.8</jdk.version>
+        <jdk.version>1.6</jdk.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
     <dependencyManagement>
@@ -32,7 +32,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.6</version>
+                <version>2.1</version>
             </dependency>
             <dependency>
                 <groupId>net.lingala.zip4j</groupId>
@@ -63,11 +63,6 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>1.1.7</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>1.3.2</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.xml.ws</groupId>
@@ -115,7 +110,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.0.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -126,26 +121,17 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin.version}</version>
+                    <!--<version>${maven-compiler-plugin.version}</version>-->
+                    <version>3.3</version>
                     <extensions>true</extensions>
                     <configuration>
                         <source>${jdk.version}</source>
                         <target>${jdk.version}</target>
-                        <encoding>UTF-8</encoding>
+                        <encoding>UTF-8</encoding> 
+                        <fork>true</fork>
+                        <compilerVersion>1.6</compilerVersion>
                         <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.6.0</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>java</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
