--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <jdk.version>1.6</jdk.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -69,6 +70,18 @@
                 <artifactId>jaxws-rt</artifactId>
                 <version>2.2.6</version>
             </dependency>
+            <dependency>
+                <groupId>com.sun.xml.parsers</groupId>
+                <artifactId>jaxp-ri</artifactId>
+                <version>1.4.5</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>jaxp-api</artifactId>
+                        <groupId>javax.xml.parsers</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -131,6 +144,15 @@
                         <fork>true</fork>
                         <compilerVersion>1.6</compilerVersion>
                         <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ejb-plugin</artifactId>
+                    <version>2.3</version>
+                    <configuration>
+                        <ejbVersion>3.1</ejbVersion>
                     </configuration>
                 </plugin>
             </plugins>
